--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   # QR code generation
   qr_flutter: ^4.1.0
   
+  # Step indicator for payment process
+  step_bar: ^0.1.2
+  
   # Internationalization
   intl: ^0.19.0
   
