--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,9 @@ dependencies:
   step_bar: ^0.1.2
   
   # Internationalization
-  intl: ^0.19.0
+  intl: ^0.20.2
+  flutter_localizations:
+    sdk: flutter
   
   # Local storage
   shared_preferences: ^2.3.2
@@ -64,6 +66,7 @@ dependencies:
   
   # Value equality
   equatable: ^2.0.5
+  go_router: ^16.2.4
 
 dev_dependencies:
   flutter_test:
