--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       run: flutter pub get
     
     - name: Verify formatting
-      run: flutter format --dry-run --set-exit-if-changed .
+      run: dart format --output=none --set-exit-if-changed .
     
     - name: Analyze project source
       run: flutter analyze --fatal-infos
