Update .gitignore to include FORMAT_COMMAND_FIX.md and ANALYZE_COMMAND_FIX.md files

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ BADGE_FIX_FINAL.md
 TEST_FIX_SUMMARY.md
 CI_CD_FIX_SUMMARY.md
 FLUTTER_VERSION_FIX.md
+FORMAT_COMMAND_FIX.md
+ANALYZE_COMMAND_FIX.md
